[package]
name = "dobby"
description = "Safe bindings for the Dobby inline hooking library"
authors = ["Paskal Sitepu <rmnscnce@ya.ru>"]
license = "Apache-2.0"
version = "0.0.0"
edition = "2021"

[features]
static = ["dobby-sys/static"]

[dependencies]
dobby-sys = { path = "sys" }
thiserror = { version = "1.0" }

[workspace]
members = ["sys"]
